[package]
name = "bynamo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-channel = "2.0.0"
async-recursion = "1.0.5"
async-trait = "0.1.74"
byteorder = "1.5.0"
dashmap = "5.5.3"
deadpool = "0.10.0"
derive_more = "0.99.17"
fasthash = "0.4.0"
futures = "0.3.28"
itertools = "0.11.0"
lazy_static = "1.4.0"
log = "0.4.20"
log-derive = "0.4.1"
maplit = "1.0.2"
prometheus = { version = "0.13.3", features = ["push"] }
prost = "0.12.1"
rand = "0.8.5"
stopwatch = "0.0.7"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
tonic = "0.10.2"
quinn = "*"
rustls = { version = "*", features = ["dangerous_configuration", "quic"] }
rcgen = "0.11.3"
bincode = "1.3.3"
serde = { version = "1.0.193", features = ["derive"] }

[build-dependencies]
tonic-build = "0.10"

[[bin]]
name = "main"
path = "src/main.rs"

[profile.release]
#lto = true