[package]
name = "bynamo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-recursion = "1.0.5"
async-trait = "0.1.74"
dashmap = "5.5.3"
fasthash = "0.4.0"
futures = "0.3.28"
lazy_static = "1.4.0"
log = "0.4.20"
maplit = "1.0.2"
prometheus = { version = "0.13.3", features = ["push"] }
rand = "0.8.5"
stopwatch = "0.0.7"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
quinn = "*"
rustls = { version = "*", features = ["dangerous_configuration", "quic"] }
rcgen = "0.11.3"
bincode = "1.3.3"
serde = { version = "1.0.193", features = ["derive"] }
byteorder = "1.5.0"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "wal"
path = "src/wal.rs"

[[bin]]
name = "btree"
path = "src/btree.rs"

[profile.release]
#lto = true